# sideScroller

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_Mixer.cmake
doc/: MapEnum
res/levels/: 01012_logic.txt  0101_logic.txt
src/: AABB.cpp  AABB.h  Brick.h  Constants.h  Context.cpp  Context.h  DynamicObject.h  HUD.cpp  HUD.h  InputHandler.cpp  InputHandler.h  InteractiveObject.h  Map.cpp  Map.h  Mario.cpp  Mario.h  Utils.h  World.cpp  World.h  main.cpp
src/Objects/: AnimatedScore.cpp  AnimatedScore.h  BoxBase.cpp  BoxBase.h  Brick.h  BrickCoin.cpp  BrickCoin.h  BrickMushroom.cpp  BrickMushroom.h  Coin.cpp  Coin.h  CoinBox.cpp  CoinBox.h  Fireball.cpp  Fireball.h  Flag.cpp  Flag.h  Flower.cpp  Flower.h  Goomba.cpp  Goomba.h  HiddenCoin.cpp  HiddenCoin.h  HiddenCoinBox.cpp  HiddenCoinBox.h  InteractiveObject.h  Koopa.cpp  Koopa.h  Mario.cpp  Mario.h  Mushroom.cpp  Mushroom.h  MushroomBox.cpp  MushroomBox.h  Star.cpp  Star.h  StarBrick.h
